update gallery images

--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
     <hr> <!-- linea de separado -->
 
     <h2>Planes</h2> <!-- subtitulo h2 -->
-    <img class="galery" src="C:\Users\SIMON\OneDrive - UPB\DESARROLLO WEB - SAPIEN\Plaza-Botero.png" alt="Plaza de Botero" width="300">
-    <img class="galery" src="C:\Users\SIMON\OneDrive - UPB\DESARROLLO WEB - SAPIEN\Atansio Girardot.png" alt="Estadio Atanasio Girardot" width="300">
-    <img class="galery" src="C:\Users\SIMON\OneDrive - UPB\DESARROLLO WEB - SAPIEN\Comuna 13.png" alt="Mirador la Comuna 13" width="300">
-    <img class="galery" src="C:\Users\SIMON\OneDrive - UPB\DESARROLLO WEB - SAPIEN\JardinBotanico.png" alt="Jardin Botanico" width="300">
-    <img class="galery" src="C:\Users\SIMON\OneDrive - UPB\DESARROLLO WEB - SAPIEN\parquenorte.png" alt="Parque de diversiones" width="300">
-    <img class="galery" src="C:\Users\SIMON\OneDrive - UPB\DESARROLLO WEB - SAPIEN\Provenza.png" alt="Noche nocturna" width="300">
+
+    <img class="galery" src="img/plaza-botero.png" alt="Plaza de Botero" width="300">
+    <img class="galery" src="img/atanasio-girardot.png" alt="Estadio Atanasio Girardot" width="300">
+    <img class="galery" src="img/comuna-13.png" alt="Mirador la Comuna 13" width="300">
+    <img class="galery" src="img/jardin-botanico.png" alt="Jardín Botánico" width="300">
+    <img class="galery" src="img/parque-norte.png" alt="Parque de diversiones" width="300">
+    <img class="galery" src="img/provenza.png" alt="Noche nocturna" width="300">
+
 
     <hr> <!-- linea de separado -->
     
