Update img plaza botero

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <h2>Planes</h2> <!-- subtitulo h2 -->
 
-    <img class="galery" src="img/plaza-botero.png" alt="Plaza de Botero" width="300">
+    <img class="galery" src="img/plaza-Botero.png" alt="Plaza de Botero" width="300">
     <img class="galery" src="img/atanasio-girardot.png" alt="Estadio Atanasio Girardot" width="300">
     <img class="galery" src="img/comuna-13.png" alt="Mirador la Comuna 13" width="300">
     <img class="galery" src="img/jardin-botanico.png" alt="Jardín Botánico" width="300">
